[package]
name = "hnsw_rs"
version = "0.3.1"
authors = ["jeanpierre.both@gmail.com"]
description = "Ann based on Hierarchical Navigable Small World Graphs from Yu.A. Malkov and D.A Yashunin"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["algorithms", "ann", "hnsw"]
repository = "https://github.com/jean-pierreBoth/hnswlib-rs"
documentation = "https://docs.rs/hnsw_rs"
edition = "2021"

[profile.release]
lto = true
opt-level = 3

[lib]
path = "src/lib.rs"

[[example]]
name = "random"
path = "examples/random.rs"

[[example]]
name = "ann-glove"
path = "examples/ann-glove25-angular.rs"

[[example]]
name = "ann-mnist"
path = "examples/ann-mnist-784-euclidean.rs"

[[example]]
name = "ann-sift1m"
path = "examples/ann-sift1m-128-euclidean.rs"

[[example]]
name = "levenshtein"
path = "examples/levensthein.rs"

[dependencies]
anyhow = { version = "1.0" }
anndists = { version = "0.1.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
cfg-if = { version = "1.0" }
parking_lot = "0.12"
rayon = { version = "1.10" }
num_cpus = { version = "1.16" }
cpu-time = { version = "1.0" }
num-traits = { version = "0.2" }
hashbrown = { version = "0.14" }
indexmap = { version = "2.2" }
rand = { version = "0.8" }
lazy_static = { version = "1.4" }
mmap-rs = { version = "0.6" }
log = { version = "0.4" }
# NOTE: put this in dev dependencies, as it is a logging consumer? 
env_logger = { version = "0.10" }

# for benchmarks and examples
[dev-dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
hdf5-sys = { git = "https://github.com/aldanor/hdf5-rust.git", features = ["static", "zlib"]}
ndarray = { version = "0.15" }
skiplist = { version = "0.5" }
tempfile = { version = "3" }

[features]
default = []
# feature for std simd on nightly
stdsimd = ["anndists/stdsimd"]
# feature for simd on stable for x86*
simdeez_f = ["anndists/simdeez_f"]
